syntax = "proto3";
package messenger;

import "raftpb/raft.proto";
import "common.proto";
import "object.proto";

option go_package = "ecos/edge-node/alaya";

service Alaya {
  rpc RecordObjectMeta(ObjectMeta) returns (Result) {}
  rpc SendRaftMessage (PGRaftMessage) returns (PGRaftMessage) {}
}

message MetaData {
  map<string, string> attrs = 1;
}

message PGRaftMessage {
  uint64 pg_id = 1;
  raftpb.Message message = 2;
}